Fix cartesian axis ticks flickering on mouse events

--- a/src/ui/Charts/Chart/_Chart.scss
+++ b/src/ui/Charts/Chart/_Chart.scss
@@ -9,6 +9,10 @@
       margin: 0 auto;
     }
 
+    &-cartesian-axis {
+      user-select: none;
+    }
+
     &-default-legend {
       margin-left: 67px !important;
     }
